# resonance

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  README.md  WORKFLOW.md  onair.sh  pyproject.toml  requirements.txt  setup.sh  wizard.sh
.claude/: CLAUDE.md  README.md  settings.json  version.json
.claude/.claude-plugin/: plugin.json
.claude/agents/: architect.md  data.md  developer.md  documenter.md  pm.md  researcher.md  (+9 more)
Fresh/: .gitignore  .mcp.json  CLAUDE.md  wizard.sh
Test/: README.md  package-lock.json
cli/: __init__.py  main.py
docs/: README.md  agent-interaction-model.md  broad-awareness-and-context-retrieval.md  claude-worker-adapter.md  flow-diagrams.md  how-it-works.md  human-control-board-design.md  indexing-and-knowledge-model.md  linear-project-overview.md  operator-runbook.md  orchestrator-technical-design.md  pep-template.md  pep-to-execution-design.md  pipeline-flow-diagram.md  pipeline-status.md  project-overview.md  resonance-execution-brief.md  resonance-kickoff-ticket.md  risks-weaknesses-and-open-questions.md  skills-and-rules-architecture.md  supervised-session-architecture-v2.md  symphony-claude-adaptation.md  system-architecture.md  ui-dom-inspector.md  workflow-and-approval-model.md  workflow-simulation.md
orchestrator/: __init__.py  classifier.py  config.py  events.py  linear_client.py  main.py  memory.py  planner.py  poller.py  runner.py  state.py  tracer.py  workspace.py
scripts/: post_linear_overview.py  sync-design-system.py
tui/: app.py
ui-dom-inspector/: .gitignore  README.md  package-lock.json  package.json
(+172 files in other folders)
