[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "resonance"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "textual>=0.60.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
resonance = "cli.main:cli"
reso = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*", "cli*"]
